# kolokwium_github

./: README.md
zadanie4/: Makefile
zadanie5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myProgram
zadanie5/src/: main.cpp
zadanie6/: CMakeLists.txt
